--- a/my_website/js/index.html
+++ b/my_website/js/index.html
@@ -9,5 +9,10 @@
 		<a href="portfolio.html">Portfolio</a>
 		<h1>This is Christian Valadez's Home Page!</h1>
 		<img src="images/home.jpg" height="250">
+		<h2>Here is my avatar!</h2>
+		<img src="avatar.png">
 	</body>
 </html>
+
+
+
